network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-petclinic-to-db
spec:
  podSelector:
    matchLabels:
      app: demo-db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: petclinic
      ports:
        - protocol: TCP
          port: 5432
  policyTypes:
    - Ingress
